# daglint

./: .bumpver_cheatsheet.md  .daglint.example.yaml  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERSION_MANAGEMENT.md  dev.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pr-checks.yml
examples/: invalid_dag.py  valid_dag.py
src/daglint/: __init__.py  cli.py  config.py  linter.py  models.py  rules.py
src/daglint/rules/: README.md  __init__.py  base.py  configuration.py  metadata.py  naming.py  validation.py
src/daglint/rules/metadata/: __init__.py  doc_md_validation.py  max_active_runs_validation.py  owner_validation.py  required_dag_params.py  tag_requirements.py
tests/: test_cli.py  test_config.py  test_linter.py  test_owner_validation.py  test_required_dag_params.py  test_rules.py  test_tag_requirements.py
tests/rules/: __init__.py  test_catchup_validation.py  test_dag_id_convention.py  test_doc_md_validation.py  test_max_active_runs_validation.py  test_no_duplicate_task_ids.py  test_owner_validation.py  test_required_dag_params.py  test_retry_configuration.py  test_schedule_validation.py  test_tag_requirements.py  test_task_id_convention.py
